there is a big gap it needs to be fixed

--- a/markup/components/reviews/reviews.scss
+++ b/markup/components/reviews/reviews.scss
@@ -1,113 +1,95 @@
-.reviews{
+.reviews {
     padding-top: 128px;
     padding-bottom: 116px;
-
-    &__slider{
+    &__slider {
         position: relative;
     }
-    &__wrapper{
+    &__wrapper {
         margin-left: 0;
         margin-right: 0;
-        @media (min-width: $screen-sm-min){
+        @media (min-width: $screen-sm-min) {
             margin-left: 56px;
-            margin-right: 56px;        
+            margin-right: 56px;
         }
     }
-    .carousel-indicators{
-        position: absolute;
+    .carousel-indicators {
+        position: relative;
         z-index: 3;
         top: 0;
-        bottom: auto;        
         left: 0;
-        width: 100%;
         margin: 0;
-        text-align: center;
-        :after{
-
-        } 
-        li{
+        bottom: auto;
+        width: 100%;
+        text-align: justify;
+        &:after {
+            content: '';
+            width: 100%;
             display: inline-block;
+        }
+        li {
+            display: inline-block;
+            max-width: 30%;
             width: 130px;
-            height: 130px;
+            height: auto;
             transition: all 0.6s cubic-bezier(0.2, 0, 0.12, 1.07);
             transform: scale(0.7);
             border: none;
-            @media (max-width: 500px){
-                width: 90px;
-                height: 90px;
-            }
-            // @media (min-width: $screen-sm-min){                
-            //     width: 130px;
-            //     height: 130px;
-            // }
             &.active {
                 transform: scale(1);
-
-                img{
+                img {
                     box-shadow: 14px 38px 40px 0px rgba(92, 95, 101, 0.28);
                 }
-            }            
-            img.reviews__img{
+            }
+            img.reviews__img {
                 display: block;
                 max-width: 100%;
-                border-radius: 100%;    
-            }         
-            &:first-child{
-                float: left;
-            }   
-            &:last-child{
-                float: right;
+                border-radius: 100%;
             }
-        }  
+        }
     }
-    &__item-wrapper{
+    &__item-wrapper {
         padding-top: 180px;
     }
-    &__item-header{
+    &__item-header {
         margin-bottom: 42px;
         font-size: 32px;
     }
-    &__item-text{
+    &__item-text {
         margin-bottom: 22px;
     }
-    &__item-rating{
+    &__item-rating {
         margin-bottom: 59px;
         font-size: 24px;
-        & > .fa-star{
+        & > .fa-star {
             margin-right: 4px;
             margin-left: 4px;
         }
-
-        .gold-star{
+        .gold-star {
             color: #f2bc3b;
         }
     }
-    &__arrow-left{
-        @include bg-svg($arrow_left); 
-    }
-    &__arrow-right{
-        @include bg-svg($arrow_right); 
-    }
-    .carousel-control{
+    .carousel-control {
         width: 42px;
         height: 42px;
         color: $plain-text-color;
         background: none;
         font-size: 70px;
-
-        @media (max-width: $screen-md-max){
+        @media (max-width: $screen-md-max) {
             display: none;
         }
-
-        &.left{
+        &.left {
             top: 56px;
             left: -40%;
         }
-        &.right{
+        &.right {
             top: 56px;
             right: -40%;
         }
     }
-
-    
+    &__arrow-left {
+        @include bg-svg($arrow_left);
+    }
+    &__arrow-right {
+        @include bg-svg($arrow_right);
+    }
 }
